# seal-engine

./: .gitignore  .vcpkg_deps.txt  CMakeLists.txt  README.md  win-install.ps1
cpp-bindings/: CMakeLists.txt
cpp-bindings/src/: entity.cpp  errors.cpp  window.cpp
cpp-bindings/src/gl/: program.cpp  shader.cpp
engine/: .gitignore  CMakeLists.txt
engine-main/: CMakeLists.txt  main.cpp
engine/src/: camera.c  debug.c  init.c  input.c  io.c  main.c  test_camera.c  window.c
engine/src/components/: renderer2d.c  transform.c
engine/src/ecs/: component.c  entity.c  query.h  systems.c  test_component.h  test_component_buffer.c
engine/src/gl/: shader.c  texture.c  vbo.c
engine/src/math/: common.c  gmatrix.c  gmatrix.h  matrix2.c  matrix3.c  matrix4.c  rect.c  test_rect.c  vector2.c
engine/src/math/series/: vector2.c
engine/src/systems/: batcher.c  render2d.c
engine/src/systems/aabb/: component.c  ray.c  ray.h  raycast.c  test_ray.c
engine/src/systems/collision2d/: collider.c  common.h  component.c  const.c
engine/src/systems/collision2d/shapes/: rect.c
engine/src/systems/render2d/: batcher.c  component.c  const.c  const.h  render2d.c  system.c
engine/src/systems/transform2d/: component.c
engine/tests/: CMakeLists.txt
engine/tests/ecs/: cmp-add-1.c  cmp-add-2.c  cmp-buf-leak.c  cmp-multi-query-one.c  cmp-multi-query.c  cmp-single-query.c  test_component_buffer.c
engine/tests/include/: test-common.h
engine/tests/include/tests/: component.h
framework/: CMakeLists.txt
framework/src/: common.c  debug.c  fs.c  image.c  logging.c  windows.c.i
framework/src/imaging/: png.c
framework/tests/: CMakeLists.txt  test_debug_wrapper.c  test_file_iterator.c
include/: seal.h
include/seal/: common.h  debug.h  fs.h  gl.h  input.h  io.h  math.h  window.h
include/seal/components/: all.h
include/seal/components/2d/: aabb.h  collider.h  collision.h  renderer.h  transform.h
include/seal/cpp/: component.hpp  error.hpp  gl.hpp  window.hpp
include/seal/ecs/: component.h  system.h
include/seal/gl/: shader.h  texture.h
include/seal/io/: fs.h  img.h  input.h
include/seal/math/: matrix2.h  matrix3.h  matrix4.h  rect.h  vector2.h  vector4.h
include/seal/math/series/: vector2.h
include/seal/render2d/: batcher.h
include/seal/systems/: all.h  render2d.h
include/seal/systems/collision2d/: shapes.h
include/seal/testing/: suite.h
include/seal/types/: camera.h
packager/: CMakeLists.txt  README.md  config.h.i  main.c
packager/include/: argv.h  cache.h  filesystem.h  lookup.h  packager.h
packager/src/: argv.c  cache.c  common.c  identify.c  lookup.c  selector.c  test_argv.c
packager/src/filesystem/: glob.c  test_glob.c  windows.c.i
packager/tests/: CMakeLists.txt  suite.h  test_argv.c  test_file_iterator.c  test_glob.c
packager/tests/test_folder/: myfile
packager/tests/test_folder/sub/: file2
